Fixed old examples with new dag